--- a/css/styles.css
+++ b/css/styles.css
@@ -151,13 +151,14 @@ nav {
   text-transform: uppercase;
 }
 .order-button {
-  display: inline-block;
   border-radius: 4px;
+  border: 0;
   padding: 10px 32px;
   min-width: 200px;
 
   color: var(--secondary-title-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -332,6 +333,7 @@ nav {
 /* footer */
 footer {
   background-color: var(--footer-background-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .footer-flex {
   display: flex;
@@ -372,7 +374,7 @@ footer {
 }
 .footer-title {
   display: block;
-  margin-bottom: 21px;
+  margin-bottom: 20px;
 
   color: var(--secondary-title-color);
   font-weight: 700;
@@ -402,21 +404,40 @@ footer {
 .socials a:focus {
   background-color: var(--accent-color);
 }
+.subscription input[type='email'] {
+  margin-right: 12px;
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 16px;
+
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
 .subscribe-button {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   border: 0;
   border-radius: 4px;
-  padding: 10px 45px 10px 46px;
+  padding: 10px 28px 10px 29px;
   min-width: 200px;
 
   color: var(--secondary-title-color);
   background-color: var(--accent-color);
-  font-family: inherit;
   font-weight: 900;
   font-size: 16px;
   line-height: 1.87;
   text-align: center;
   letter-spacing: 0.06em;
+}
+.subscribe-button .icon {
+  margin-left: 10px;
 }
 .copyright {
   border-top: 1px solid rgba(255, 255, 255, 0.1);
