--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,169 @@ nav {
 .section.border {
   border-bottom: 1px solid #ececec;
 }
+/* модалка */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%) scale(0.9);
+}
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 221px;
+  transform: translate(-50%) scale(1);
+  width: 528px;
+  height: 581px;
+  padding: 40px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  background-color: var(--secondary-title-color);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+.close-button {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  width: 30px;
+  height: 30px;
+
+  background-color: var(--secondary-title-color);
+  padding: 0;
+  border: 0;
+  border-radius: 50%;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+}
+.modal-title {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-size: 20px;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.input-list > li {
+  position: relative;
+  margin-bottom: 28px;
+}
+li > input {
+  width: 100%;
+  height: 40px;
+  padding: 12px 16px 12px 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: var(--text-color);
+}
+.form-label {
+  position: absolute;
+  top: 50%;
+  left: 42px;
+  transform: translateY(-50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: var(--text-color);
+}
+li > input:focus + .form-label,
+li > input:not(:placeholder-shown) + .form-label {
+  transform: translate(-19px, -35px);
+  color: var(--accent-color);
+}
+.input-list .icon {
+  position: absolute;
+  top: 50%;
+  left: 19px;
+  transform: translateY(-50%);
+  fill: var(--title-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+li > input:focus ~ .icon {
+  fill: var(--accent-color);
+}
+.textarea-form {
+  position: relative;
+}
+textarea {
+  resize: none;
+  margin-bottom: 20px;
+  padding: 12px 16px;
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: var(--text-color);
+}
+.textarea-label {
+  position: absolute;
+  top: 10%;
+  left: 16px;
+  transform: translateY(-30%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: var(--text-color);
+}
+textarea:focus + .textarea-label,
+textarea:not(:placeholder-shown) + .textarea-label {
+  transform: translateY(-33px);
+  color: var(--accent-color);
+}
+.agreement {
+  display: inline-flex;
+  margin-left: 9px;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+}
+.agreement-link {
+  text-decoration: underline;
+  color: var(--accent-color);
+}
+.modal-button {
+  display: block;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  padding: 10px 55px;
+  color: var(--secondary-title-color);
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: 0;
+  border-radius: 4px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+}
 /* секція переваг */
 /* уявний заголовок клас .visually-hidden or .sr-only*/
 .fake-title {
