--- a/css/styles.css
+++ b/css/styles.css
@@ -257,7 +257,7 @@ li > input {
 }
 li > input:focus + .form-label,
 li > input:not(:placeholder-shown) + .form-label {
-  transform: translate(-19px, -35px);
+  transform: translate(-25px, -35px);
   color: var(--accent-color);
 }
 .input-list .icon {
@@ -320,6 +320,7 @@ textarea:not(:placeholder-shown) + .textarea-label {
 }
 .agreement {
   display: inline-flex;
+  align-items: center;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
@@ -328,16 +329,17 @@ textarea:not(:placeholder-shown) + .textarea-label {
 .agreement .icon {
   display: inline-block;
   margin-right: 8px;
-  height: 15px;
+  height: 16px;
   width: 15px;
   border: 2px solid var(--title-color);
-  border-radius: 4px;
+  border-radius: 2px;
 }
 .checkbox:checked + .icon {
   border-color: transparent;
   background-color: var(--accent-color);
   background-image: url(../images/check.svg);
   background-size: contain;
+  background-origin: border-box;
 }
 .agreement-link {
   text-decoration: underline;
